force-app/main/default/objects/Log__c/fields/Aggregate_Queries_Limit__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Queries_Limit__c</fullName>
    <description>Returns the total number of aggregate queries that can be processed with SOQL query statements.
See getLimitAggregateQueries() documented below: 
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_limits.htm</description>
    <label>Aggregate Queries Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>