force-app/main/default/objects/Log__c/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <description>The nam of the Apex Class which generated the log. Since Exception.getStackTraceString() does not work in managed packages, this can be used to give at least some context of where the log was generated.</description>
    <label>Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>