force-app/main/default/objects/Log__c/fields/Callouts_Limit__c.field-meta.xml
<CustomField>
    <fullName>Callouts_Limit__c</fullName>
    <description>Returns the total number of Web service statements that can be processed.
See getLimitCallouts() documented below:
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_limits.htm</description>
    <label>Callouts Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>