force-app/main/default/objects/Log__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>Details the current execution context when the log was generated.
Displays a System.Quiddity value: 
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_enum_System_Quiddity.htm#topic-title</description>
    <label>Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>