force-app/main/default/objects/Log__c/fields/CPU_Time__c.field-meta.xml
<CustomField>
    <fullName>CPU_Time__c</fullName>
    <description>Returns the CPU time (in milliseconds) that has been used in the current transaction.
See getCpuTime() documented below:
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_limits.htm</description>
    <label>CPU Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>