force-app/main/default/objects/Log__c/fields/CPU_Time_Limit__c.field-meta.xml
<CustomField>
    <fullName>CPU_Time_Limit__c</fullName>
    <description>Returns the maximum CPU time (in milliseconds) that can be used in a transaction.
See getLimitCpuTime() documented below:
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_limits.htm</description>
    <label>CPU Time Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>