force-app/main/default/objects/Log__c/fields/DML_Rows_Limit__c.field-meta.xml
<CustomField>
    <fullName>DML_Rows_Limit__c</fullName>
    <description>Returns the total number of records that can be processed with any statement that counts against DML limits, such as DML statements, the database.EmptyRecycleBin method, and other methods.
See getLimitDMLRows() documented below:
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_limits.htm</description>
    <label>DML Rows Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>