force-app/main/default/objects/Log__c/fields/DML_Statements_Limit__c.field-meta.xml
<CustomField>
    <fullName>DML_Statements_Limit__c</fullName>
    <description>Returns the total number of DML statements or the database.EmptyRecycleBin methods that can be called.
See getLimitDMLStatements() documented below:
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_limits.htm</description>
    <label>DML Statements Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>