force-app/main/default/objects/Log__c/fields/Email_Invocations_Limit__c.field-meta.xml
<CustomField>
    <fullName>Email_Invocations_Limit__c</fullName>
    <description>Returns the total number of email invocation (such as sendEmail) that can be called.
See getLimitEmailInvocations() documented below:
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_limits.htm</description>
    <label>Email Invocations Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>