force-app/main/default/objects/Log__c/fields/Future_Calls_Limit__c.field-meta.xml
<CustomField>
    <fullName>Future_Calls_Limit__c</fullName>
    <description>Returns the total number of methods with the future annotation that can be executed (not necessarily completed).
See getLimitFutureCalls() documented below:
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_limits.htm</description>
    <label>Future Calls Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>