force-app/main/default/objects/Log__c/fields/Heap_Size__c.field-meta.xml
<CustomField>
    <fullName>Heap_Size__c</fullName>
    <description>Returns the approximate amount of memory (in bytes) that has been used for the heap.
See getHeapSize() documented below:
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_limits.htm</description>
    <label>Heap Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>