force-app/main/default/objects/Log__c/fields/Heap_Size_Limit__c.field-meta.xml
<CustomField>
    <fullName>Heap_Size_Limit__c</fullName>
    <description>Returns the total amount of memory (in bytes) that can be used for the heap.
See getLimitHeapSize() documented below:
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_limits.htm</description>
    <label>Heap Size Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>