force-app/main/default/objects/Log__c/fields/Immediate_Platform_Event_Publish_Limit__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Platform_Event_Publish_Limit__c</fullName>
    <description>Returns the total number of EventBus.publish statements that can be called for platform events configured to publish immediately.
See getLimitPublishImmediateDML() documented below:
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_limits.htm</description>
    <label>Immediate Platform Event Publish Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>