force-app/main/default/objects/Log__c/fields/Include_Limits_Data__c.field-meta.xml
<CustomField>
    <fullName>Include_Limits_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Limits Data</label>
    <type>Checkbox</type>
</CustomField>