force-app/main/default/objects/Log__c/fields/Logged_At__c.field-meta.xml
<CustomField>
    <fullName>Logged_At__c</fullName>
    <description>Shows when the log was generated. 
Different from Created Date, which shows when the log was published.</description>
    <label>Logged At</label>
    <type>DateTime</type>
</CustomField>