force-app/main/default/objects/Log__c/fields/Num_Aggregate_Queries__c.field-meta.xml
<CustomField>
    <fullName>Num_Aggregate_Queries__c</fullName>
    <description>Returns the number of aggregate queries that have been processed with any SOQL query statement.
See getAggregateQueries() documented below:
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_limits.htm</description>
    <label>Num Aggregate Queries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>