force-app/main/default/objects/Log__c/fields/Num_Callouts__c.field-meta.xml
<CustomField>
    <fullName>Num_Callouts__c</fullName>
    <description>Returns the number of Web service statements that have been processed.
See getCallouts() documented below:
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_limits.htm</description>
    <label>Num Callouts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>