force-app/main/default/objects/Log__c/fields/Num_DML_Rows__c.field-meta.xml
<CustomField>
    <fullName>Num_DML_Rows__c</fullName>
    <description>Returns the number of records that have been processed with any statement that counts against DML limits, such as DML statements, the Database.emptyRecycleBin method, and other methods.
See getDMLRows() documented below:
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_limits.htm</description>
    <label>Num DML Rows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>