force-app/main/default/objects/Log__c/fields/Num_DML_Statements__c.field-meta.xml
<CustomField>
    <fullName>Num_DML_Statements__c</fullName>
    <description>Returns the number of DML statements (such as insert, update or the database.EmptyRecycleBin method) that have been called.
See getDMLStatements() documented below:
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_limits.htm</description>
    <label>Num DML Statements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>