force-app/main/default/objects/Log__c/fields/Num_Email_Invocations__c.field-meta.xml
<CustomField>
    <fullName>Num_Email_Invocations__c</fullName>
    <description>Returns the number of email invocations (such as sendEmail) that have been called.
See getEmailInvocations() documented below:
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_limits.htm</description>
    <label>Num Email Invocations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>