force-app/main/default/objects/Log__c/fields/Num_Future_Calls__c.field-meta.xml
<CustomField>
    <fullName>Num_Future_Calls__c</fullName>
    <description>Returns the number of methods with the future annotation that have been executed (not necessarily completed).
See getFutureCalls() documented below:
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_limits.htm</description>
    <label>Num Future Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>