force-app/main/default/objects/Log__c/fields/Num_Immediate_Platform_Event_Publish__c.field-meta.xml
<CustomField>
    <fullName>Num_Immediate_Platform_Event_Publish__c</fullName>
    <description>Returns the number of EventBus.publish calls that have been made for platform events configured to publish immediately.
See getPublishImmediateDML() documented below:
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_limits.htm</description>
    <label>Num Immediate Platform Event Publish</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>