force-app/main/default/objects/Log__c/fields/Num_Push_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Num_Push_Notifications__c</fullName>
    <description>Returns the number of Apex calls that have been used by mobile push notifications during the current metering interval.
See getMobilePushApexCalls() documented below:
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_limits.htm</description>
    <label>Num Push Notifications</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>