force-app/main/default/objects/Log__c/fields/Num_QueryLocator_Rows__c.field-meta.xml
<CustomField>
    <fullName>Num_QueryLocator_Rows__c</fullName>
    <description>Returns the number of records that have been returned by the Database.getQueryLocator method.
See getQueryLocatorRows() documented below:
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_limits.htm</description>
    <label>Num QueryLocator Rows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>