force-app/main/default/objects/Log__c/fields/Num_Queueable_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Num_Queueable_Jobs__c</fullName>
    <description>Returns the number of queueable jobs that have been added to the queue per transaction. A queueable job corresponds to a class that implements the Queueable interface.
See getQueueableJobs() documented below:
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_limits.htm</description>
    <label>Num Queueable Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>