force-app/main/default/objects/Log__c/fields/Num_SOQL_Queries__c.field-meta.xml
<CustomField>
    <fullName>Num_SOQL_Queries__c</fullName>
    <description>Returns the number of SOQL queries that have been issued.
See getQueries() documented below:
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_limits.htm</description>
    <label>Num SOQL Queries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>