force-app/main/default/objects/Log__c/fields/Push_Notifications_Limit__c.field-meta.xml
<CustomField>
    <fullName>Push_Notifications_Limit__c</fullName>
    <description>Returns the total number of Apex calls that are allowed per transaction for mobile push notifications.
See getLimitMobilePushApexCalls() documented below:
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_limits.htm</description>
    <label>Push Notifications Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>