force-app/main/default/objects/Log__c/fields/Queueable_Job_Limit__c.field-meta.xml
<CustomField>
    <fullName>Queueable_Job_Limit__c</fullName>
    <description>Returns the maximum number of queueable jobs that can be added to the queue per transaction. A queueable job corresponds to a class that implements the Queueable interface.
See getLimitQueueableJobs() documented below:
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_limits.htm</description>
    <label>Queueable Job Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>