force-app/main/default/objects/Log__c/fields/SOQL_Queries_Limit__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Queries_Limit__c</fullName>
    <description>Returns the total number of SOQL queries that can be issued.
See getLimitQueries() documented below:
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_limits.htm</description>
    <label>SOQL Queries Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>