force-app/main/default/objects/Log__c/fields/SOQL_Query_Row_Limit__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Query_Row_Limit__c</fullName>
    <description>Returns the total number of records that can be returned by issuing SOQL queries.
See getLimitQueryRows() documented below:
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_limits.htm</description>
    <label>SOQL Query Row Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>