force-app/main/default/objects/Log__c/fields/SOSL_Query_Limit__c.field-meta.xml
<CustomField>
    <fullName>SOSL_Query_Limit__c</fullName>
    <description>Returns the total number of SOSL queries that can be issued.
See getLimitSoslQueries() documented below:
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_limits.htm</description>
    <label>SOSL Query Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>