force-app/main/default/objects/Log__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <description>An identifier unique to each apex transaction. Use this to group logs from the same transaction together.</description>
    <label>Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>