force-app/main/default/objects/Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Level__c</columns>
    <columns>Context__c</columns>
    <columns>Message__c</columns>
    <columns>Logged_At__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>